fix: UTF-8 문자열 리터럴에서 Enumerate로 수정하며 발생가능한 RuntimeException 제거
try catch 제거